fix gap between collapsing left nav and showing left nav toggle in docs (#3071)

--- a/pulumi-hugo/themes/default/theme/src/scss/docs/_docs-main.scss
+++ b/pulumi-hugo/themes/default/theme/src/scss/docs/_docs-main.scss
@@ -298,7 +298,7 @@ body.section-registry {
             }
         }
 
-        @media (min-width: 1280px) {
+        @media (min-width: 1297px) {
             display: flex;
             position: relative;
             top: 0;
